HVAC Backup 2/objects/PMS_Event__c.object
<CustomObject>
    <fields>
        <fullName>Account_Matched__c</fullName>
        <formula>Account__c = Asset__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PMS Events</relationshipLabel>
        <relationshipName>PMS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Matched_with_ST__c</fullName>
        <formula>Asset__c =  Service_Ticket__r.AssetId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Matched with ST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>PMS Events</relationshipLabel>
        <relationshipName>PMS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>Asset__r.Branch_Name__c</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PMS Events</relationshipLabel>
        <relationshipName>PMS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Issue__c</fullName>
        <formula>IF(AND(Start_Date__c &gt;  Asset__r.Standard_Warranty_End_Date__c, Service_Contract__c = null),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>IF(Service_Contract__c != null,  CASESAFEID( Service_Contract__r.Department__c) ,  CASESAFEID(Asset__r.Service_Department_L__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Executed__c</fullName>
        <formula>NOT(ISBLANK(Service_Ticket__c))</formula>
        <label>Is Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Skipped__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Skipped&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obligation__c</fullName>
        <formula>IF(ISBLANK(Service_Contract__c), Asset__r.Asset_Obligation__c, &quot;AMC&quot;)</formula>
        <label>Obligation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMS_Completion_SLA__c</fullName>
        <label>PMS Completion SLA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMS_Obligation__c</fullName>
        <label>PMS Obligation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>WTY</fullName>
                </value>
                <value>
                    <fullName>NIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMS_Tickets_Creation_Date__c</fullName>
        <formula>IF( Start_Date__c ==  Asset__r.Standard_Warranty_Start_Date__c, (IF( DAY(Start_Date__c) = 1, Start_Date__c, IF(month(Start_Date__c) == 12, DATE(YEAR( Start_Date__c )+1,1,1), DATE(YEAR( Start_Date__c ),month(Start_Date__c)+1,1)))), (IF( DAY(Start_Date__c) = 1, Start_Date__c, DATE(YEAR( Start_Date__c ),month(Start_Date__c),1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMS Tickets Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Asset__r.Branch__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <formula>Service_Contract__r.SAP_Contract_Number__c</formula>
        <label>SAP Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>PMS Events</relationshipLabel>
        <relationshipName>PMS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>PMS Events</relationshipLabel>
        <relationshipName>PMS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>PMS Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                    <isActive>false</isActive>
                    <label>Deleted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMS Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Branch__c</columns>
        <columns>Region__c</columns>
        <columns>Service_Contract__c</columns>
        <columns>Service_Ticket__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Is_Skipped__c</columns>
        <columns>Is_Executed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Contract__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PMS_Schedule_CBO</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service_Contract__c</columns>
        <columns>Subject__c</columns>
        <columns>PMS_Tickets_Creation_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>PMS Schedule- CBO</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>PMS Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMS Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_greater_than_SLA</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c &gt;  PMS_Completion_SLA__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date can not be greater than 35 days of PMS Creation</errorMessage>
    </validationRules>
</CustomObject>